--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@ main-title: "PHOT&#8226;O&#8226;RAMA"
 subtitle: "Photo Journal"
 description: "Photography and more"
 images:
- - image_path: /img/slider/home01.jpg
+ - image_path: /img/slider/SLIDER04.JPG
    gallery-folder: /img/slider/
- - image_path: /img/slider/home02.jpg
+ - image_path: /img/slider/SLIDER02.JPG
    gallery-folder: /img/slider/
- - image_path: /img/slider/home03.jpg
+ - image_path: /img/slider/SLIDER03.JPG
    gallery-folder: /img/slider/
+ - image_path: /img/slider/SLIDER01.JPG
+   gallery-folder: /img/slider/
+  - image_path: /img/slider/SLIDER05.JPG
+  gallery-folder: /img/slider/
 ---
 
 
