--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-main-title: "PHOT&#8226;O&#8226;RAMA"
-subtitle: "Photo Journal"
-description: "Photography and more"
+main-title: "WAN&#8226;DER&#8226;LENS"
+subtitle: "Photo blog"
+description: ""
 images:
  - image_path: /img/slider/SLIDER04.JPG
    gallery-folder: /img/slider/
@@ -80,7 +80,7 @@ images:
 	</section>
 
 <div id="footer" role="contentinfo">
-		<ul class="soc-icons">
+		<!-- <ul class="soc-icons">
 
                  {% if site.facebook_username %}
 			<li>
@@ -135,7 +135,7 @@ color:#dddddd; target="_blank" title="Email">
           </a> </li>
 	
 					
-		</ul>	
+		</ul>	 -->
 	</div>
 
   
