--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "album"
 description: "Budaphest"
 active: gallery
-header-img: "gallery/archive/g10/img7.JPG"
+header-img: "gallery/archive/g10/img29.JPEG"
 album-title: "Budaphest"
 images:
  - image_path: gallery/archive/g10/img1.JPG
@@ -49,7 +49,7 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
-   - image_path: gallery/archive/g10/img12.JPG
+ - image_path: gallery/archive/g10/img12.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
@@ -115,7 +115,7 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
-   - image_path: gallery/archive/g10/img29.JPEG
+ - image_path: gallery/archive/g10/img29.JPEG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
@@ -154,7 +154,7 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
-   - image_path: gallery/archive/g10/img39.JPEG
+ - image_path: gallery/archive/g10/img39.JPEG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
@@ -162,10 +162,6 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- 
-   
-
- 
 ---
 
 <html class="no-js" lang="en">
