--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "ALBUMS"
 description: "archive"
 active: gallery
-header-img: "img/gallery-bg.jpg"
+header-img: "gallery/archive/g10/img29.JPEG"
 images:
  - image_path: /gallery/albums/alb01.jpg
    gallery-folder: /gallery/gallery01/
@@ -40,7 +40,7 @@ images:
  - image_path: /gallery/albums/alb09.jpg
    gallery-folder: /gallery/gallery09/
    gallery-name: gallery9
-   gallery-date: November 2014
+   gallery-date: November 20124
 ---
 
 <html class="no-js" lang="en">
