--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "album"
 description: "Budaphest"
 active: gallery
-header-img: "gallery/archive/g10/img29.JPEG"
+header-img: "../archive/g10/img29.JPEG"
 album-title: "Budaphest"
 images:
  - image_path: gallery/archive/g10/img1.JPG
