--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -6,65 +6,65 @@ active: ..
 header-img: "../archive/g10/img36.JPEG"
 album-title: "Budaphest"
 images:
- - image_path: ../archive/g10/img1.JPG
+ - image_path: galary/archive/g10/img1.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img2.JPG
+ - image_path: galary/archive/g10/img2.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img3.JPG
+ - image_path: galary/archive/g10/img3.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img4.JPG
+ - image_path: galary/archive/g10/img4.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img5.JPG
+ - image_path: galary/archive/g10/img5.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img6.JPG
+ - image_path: galary/archive/g10/img6.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
- - image_path: ../archive/g10/img7.JPG
-   caption: IMAGE TITLE
-   mfp-title: IMAGE TITLE
-   copyright: © wanderlens
- - image_path: ../archive/g10/img8.JPG
+ - image_path: galary/archive/g10/img7.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img9.JPG
+ - image_path: galary/archive/g10/img8.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img10.JPG
+ - image_path: galary/archive/g10/img9.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img11.JPG
+ - image_path: galary/archive/g10/img10.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img12.JPG
+ - image_path: galary/archive/g10/img11.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img13.JPG
+ - image_path: galary/archive/g10/img12.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img14.JPG
-   caption: IMAGE TITLE
-   mfp-title: IMAGE TITLE
- - image_path: ../archive/g10/img15.JPG
+ - image_path: galary/archive/g10/img13.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../archive/g10/img16.JPG
+ - image_path: galary/archive/g10/img14.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+ - image_path: galary/archive/g10/img15.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ <!-- - image_path: ../archive/g10/img16.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
@@ -161,7 +161,7 @@ images:
  - image_path: ../archive/g10/img40.JPEG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
-   copyright: © wanderlens
+   copyright: © wanderlens -->
 ---
 
 <html class="no-js" lang="en">
