--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "album"
 description: "Budaphest"
 active: ..
-header-img: "../archive/g10/img36.JPEG"
+header-img: "galary/archive/g10/img36.JPEG"
 album-title: "Budaphest"
 images:
  - image_path: galary/archive/g10/img1.JPG
@@ -14,7 +14,7 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: galary/archive/g10/img3.JPG
+ <!-- - image_path: galary/archive/g10/img3.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
@@ -63,7 +63,7 @@ images:
  - image_path: galary/archive/g10/img15.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
-   copyright: © wanderlens
+   copyright: © wanderlens -->
  <!-- - image_path: ../archive/g10/img16.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
