--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -10,7 +10,7 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: galary/archive/g10/img2.JPG
+ - image_path: ../galary/archive/g10/img2.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
