--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -12,7 +12,7 @@ images:
    copyright: © wanderlens
  - image_path: ../galary/archive/g10/img2.JPG
    caption: IMAGE TITLE
-   mfp-title: IMAGE TITLE
+   mfp-title: IMAGE 
    copyright: © wanderlens
  <!-- - image_path: galary/archive/g10/img3.JPG
    caption: IMAGE TITLE
