--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -3,14 +3,14 @@ layout: page
 title: "album"
 description: "Budaphest"
 active: ..
-header-img: "galary/archive/g10/img36.JPEG"
+header-img: "gallery/archive/g10/img36.JPEG"
 album-title: "Budaphest"
 images:
- - image_path: galary/archive/g10/img1.JPG
+ - image_path: gallery/archive/g10/img1.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
    copyright: © wanderlens
- - image_path: ../galary/archive/g10/img2.JPG
+ - image_path: gallery/archive/g10/img2.JPG
    caption: IMAGE TITLE
    mfp-title: IMAGE 
    copyright: © wanderlens
