--- a/gallery/gallery08/index.html
+++ b/gallery/gallery08/index.html
@@ -16,6 +16,25 @@ images:
  - image_path: /gallery/archive/g08/bg3.jpg
    caption: IMAGE TITLE
    copyright: © photorama
+ - image_path: gallery/archive/g10/img3.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img4.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img5.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img6.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+ - image_path: /gallery/archive/g10/img7.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
 ---
 
 <html class="no-js" lang="en">
