--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -14,6 +14,56 @@ images:
    caption: IMAGE TITLE
    mfp-title: IMAGE 
    copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img3.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img4.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img5.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img6.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+ - image_path: /gallery/archive/g10/img7.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img8.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img9.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img10.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img11.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img12.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img13.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img14.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+ - image_path: /gallery/archive/g10/img15.JPG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
 ---
  
 <html class="no-js" lang="en">
