--- a/gallery/gallery09/index.html
+++ b/gallery/gallery09/index.html
@@ -6,6 +6,18 @@ active: ..
 header-img: "gallery/archive/g10/img36.JPEG"
 album-title: "Budaphest"
 images:
+ - image_path: /gallery/archive/g10/img38.JPEG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img39.JPEG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
+ - image_path: /gallery/archive/g10/img40.JPEG
+   caption: IMAGE TITLE
+   mfp-title: IMAGE TITLE
+   copyright: © wanderlens
  - image_path: "/gallery/archive/g10/img1.JPG"
    caption: IMAGE TITLE
    mfp-title: IMAGE TITLE
